# liesas-quickstart

./: Cargo.toml  rust-toolchain.toml
networks/: devnet1.toml
src/: client.rs  codespan.rs  commands.rs  config.rs  main.rs  validator.rs
src/client/: ream.rs
src/commands/: start.rs
